// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PExpandable rendering renders PExpandable 1`] = `
<section>
  <transition-stub>
    <div
      class="pExpandable"
    >
      <p-button-stub
        class="pExpandable__icon"
      />
      <header>
        <h1 />
      </header>
      <p />
    </div>
  </transition-stub>
</section>
`;

exports[`PExpandable rendering renders PSButton 1`] = `
<section>
  <transition-stub>
    <div
      class="pExpandable"
    >
      <p-button-stub
        class="pExpandable__icon"
      />
      <header>
        <h1 />
      </header>
      <p />
    </div>
  </transition-stub>
</section>
`;

exports[`PExpandable rendering renders all the props 1`] = `
<section>
  <transition-stub>
    <div
      class="pExpandable FakeClass"
    >
      <p-button-stub
        class="pExpandable__icon"
      />
      <header>
        <h1>
          Title
        </h1>
      </header>
      <p>
        S...
      </p>
    </div>
  </transition-stub>
</section>
`;

exports[`PExpandable rendering renders expanded 1`] = `
<section>
  <transition-stub>
    <div
      class="pExpandable"
    >
      <button
        arialabel="Minmize content button"
        class="PButton pExpandable__icon pExpandable__icon--expanded"
      >
        
         - 
        
      </button>
      
      
      <div>
        I am the content
      </div>
      
      
    </div>
  </transition-stub>
</section>
`;
